--- a/gen-report/template.pug
+++ b/gen-report/template.pug
@@ -5,11 +5,11 @@ html
     each result in results
       details.mb-8
         summary
-            span.text-xl #{result.fileName}            
-            span.ml-4.bg-gray-200.p-1.px-4.border-gray-300.border-2.rounded-full
-                | #{result.messages.length}
-            br
-            a.text-blue-300(href="vscode://file/" + result.filePath) #{result.filePath} (vscodeで開く)
+          span.text-xl #{result.fileName}            
+          span.ml-4.bg-gray-200.p-1.px-4.border-gray-300.border-2.rounded-full
+            | #{result.messages.length}
+          br
+          a.text-blue-300(href="vscode://file/" + result.filePath) #{result.filePath} (vscodeで開く)
         div.p-4
           table.border-collapse.w-full
             each message in result.messages
@@ -21,4 +21,8 @@ html
                   | #{files[result.fileName].lines[message.line - 1]}
               tr.border-gray-200.border-2.bg-yellow-50.font-bold
                 td.p-3(colspan="2")
-                  | #{message.message}
+                  | #{message.message} <br>
+                  span.font-normal.text-gray-400 #{message.ruleId} <br>
+                  if message.fix !== undefined 
+                    span.bg-gray-500.font-normal.inline-block.mt-2.p-1.px-2.rounded-full.text-white.text-xs
+                      | 機械的に修正可能
