--- a/gen-report/template.pug
+++ b/gen-report/template.pug
@@ -1,6 +1,11 @@
 html
   head
     script(src="https://cdn.tailwindcss.com")
+    style(type="text/css").
+      .is-here {
+            border-bottom: solid 3px rgba(248, 113, 113, 1);
+            padding-bottom: 3px;
+      }
   body.p-6.text-gray-600
     each result in results
       details.mb-8
@@ -18,11 +23,15 @@ html
                   input(type="checkbox").mr-1
                   | #{message.line}行目
                 td.p-2.border-gray-200.border-2.align-top
-                  | #{files[result.fileName].lines[message.line - 1]}
-              tr.border-gray-200.border-2.bg-yellow-50.font-bold
+                  each char, i in files[result.fileName].lines[message.line - 1]
+                    span(class=message.column === i+1 ? 'is-here' : '') #{char}
+              tr.border-gray-200.border-2.bg-yellow-50
                 td.p-3(colspan="2")
-                  | #{message.message} <br>
-                  span.font-normal.text-gray-400 #{message.ruleId} <br>
-                  if message.fix !== undefined 
-                    span.bg-gray-500.font-normal.inline-block.mt-2.p-1.px-2.rounded-full.text-white.text-xs
-                      | 機械的に修正可能
+                  div.font-bold #{message.message}
+                  div.font-normal.text-gray-400 #{message.ruleId} <br>
+                  div
+                    if message.fix !== undefined 
+                      span.bg-gray-500.font-normal.inline-block.mt-2.p-1.px-2.rounded-full.text-white.text-xs
+                        | 機械的に修正可能
+                  div.mt-4
+                    a.text-blue-400(href=`vscode://file/${result.filePath}:${message.line}:${message.column}`) (vscodeで開く)
